--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alessio's Pizzaria - As melhores pizzas da cidade</title>
+    <title>Andre Pizzaria - As melhores pizzas da cidade</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -63,14 +63,13 @@
         </div>
     </section>
 
-    <!-- Sobre Nós Section -->
     <section class="about" id="sobre">
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
                     <h2>Sobre Nós</h2>
                     <p>Nossa pizzaria é dedicada a criar as melhores pizzas do mundo, com ingredientes frescos e receitas exclusivas.</p>
-                    <p>Fundada em 2025, a Pizzaria traz o autêntico sabor da pizza italiana com um toque brasileiro. Nosso segredo está na massa fina e crocante, nos ingredientes selecionados e no amor que colocamos em cada pizza.</p>
+                    <p>Fundada em 2025, a Pizzaria traz o autêntico sabor da pizza italiana com um toque brasileiro.</p>
                 </div>
                 <div class="about-image">
                     <img src="https://images.unsplash.com/photo-1552539618-7eec9b4d1796?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Interior da pizzaria">
@@ -79,7 +78,6 @@
         </div>
     </section>
 
-    <!-- Contato Section -->
     <section class="contact" id="contato">
         <div class="container">
             <h2 class="section-title">Contato</h2>
@@ -89,23 +87,22 @@
                 <div class="contact-card">
                     <i class="fas fa-map-marker-alt"></i>
                     <h3>Endereço</h3>
-                    <p>Avenida Onze de Outubro, nº 123</p>
-                    <p>Centro, Cidade Qualquer/RJ</p>
-                    <p>CEP: 12345-678</p>
+                    <p>Avenida das Pombas, nº 123</p>
+                    <p>Floresta, Cascavel/PR</p>
                 </div>
                 <div class="contact-card">
                     <i class="fas fa-phone"></i>
                     <h3>Telefone</h3>
-                    <p>(11) 5555-5555</p>
-                    <p>WhatsApp: (11) 99999-9999</p>
+                    <p>(45) 1234-5678</p>
+                    <p>WhatsApp: (45) 12345-6789</p>
                 </div>
                 <div class="contact-card">
                     <i class="fas fa-envelope"></i>
                     <h3>E-mail</h3>
-                    <p>contato@alessios.pizza</p>
+                    <p>andre.pizaria@gmail.com</p>
                     <h3 class="opening-hours-title">Horário de Funcionamento</h3>
-                    <p>Segunda a Sábado: 11h00 às 23h00</p>
-                    <p>Domingo: 16h00 às 23h00</p>
+                    <p>Segunda a Sábado: 19h00 às 23h00</p>
+                    <p>Domingo: 19h00 às 23h00</p>
                 </div>
             </div>
         </div>
@@ -114,7 +111,7 @@
     <!-- Rodapé -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Alessio's Pizzaria. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Andre Pizzaria. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
